chore: remove deprecated Club Charros fields from CSV schema
